# utils

./: create_new_cmake_project.py  create_new_make_project.py  create_new_project.py
project_creators/: create_new_cmake_project.py
usb_check/: CMakeLists.txt  usb_dev_connected.c
